--- a/service.yaml
+++ b/service.yaml
@@ -9,3 +9,19 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 9376
+
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: static-web
+  labels:
+    role: myrole
+spec:
+  containers:
+    - name: web
+      image: nginx
+      ports:
+        - name: web
+          containerPort: 80
+          protocol: TCP
